@@ -1,3 +1,8 @@
+2017-11-28  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Define parseFrameDesignation function.
+
 2017-11-27  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_content.js:
